Refactored the code

--- a/src/components/Poll/poll-Item/poll-Item.scss
+++ b/src/components/Poll/poll-Item/poll-Item.scss
@@ -43,6 +43,7 @@
 
 // question option
 .question-answer_item-label {
+  margin: 7px 0;
   font-size: 14px;
   line-height: 22px;
   color: #333333;
