--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<div style="width: 100%; height: 120px;background-color: #7AC1E4;"></div>
+<div class="banner" style="width: 100%; height: 120px;background-color: #7AC1E4;"></div>
 <%- include('components/menu/header__nav/header__nav'); -%>
 <%- include('components/header/header'); -%>
 
