--- a/src/components/content-block/forms/location-search/locationSearch.scss
+++ b/src/components/content-block/forms/location-search/locationSearch.scss
@@ -43,6 +43,7 @@
 .location-search__form__input-container {
   width: 76%;
 }
+
 .location-search__modal .location-search__form {
   margin: 0 20px;
   display: flex;
@@ -166,20 +167,66 @@
 
 .location-search__country {
   margin-right: 20px;
-  cursor: pointer;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 10px;
   position: relative;
   width: 104px;
+}
+
+.select__head {
+  width: 100%;
   height: 36px;
-  border-radius: 10px;
   border: 1px solid #D5DCE0;
+  border-radius: 10px;
+  padding: 9px 9px 7px 9px;
+  cursor: pointer;
+  position: relative;
+}
+
+.select__head.open {
+  border-bottom: 0;
+  border-radius: 10px 10px 0 0;
+}
+
+.select__list {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 100;
+  border: 1px solid #D5DCE0;
+  border-radius: 0 0 10px 10px;
+  padding: 2px 9px 7px 5px;
+  flex-direction: column;
+}
+
+.select__list.active {
+  display: flex;
+  border-top: 0;
+}
+
+.select__list .location-search__country-item {
+  margin: 10px 0;
+  padding: 5px 5px 5px 9px;
+  width: fit-content;
+  // Временно
+  pointer-events: none;
+}
+
+.select__list .location-search__country-item:hover {
+  background-color: #F0F2F5;
+  border-radius: 5px;
+}
+
+.location-search__country-item {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .location-search__country-prefix {
-  margin-right: 5px;
+  margin-right: 8px;
   color: #777C86;
   font-size: 14px;
 }
@@ -191,4 +238,9 @@
 .location-search__country-arrow {
   position: absolute;
   right: 11px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.select__head.open .location-search__country-arrow {
+  transform: translateY(-50%) rotate(180deg);
 }
