--- a/src/components/dashboard/author-card/authorСard.scss
+++ b/src/components/dashboard/author-card/authorСard.scss
@@ -1,4 +1,4 @@
-.author-card__logo-container {
+.author-card__logo {
   margin-right: 30px;
 }
 
@@ -9,10 +9,7 @@
 }
 
 .author-card__logo-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #E0E4EB;
+
 }
 
 .author-card__logo__switch-btn {
@@ -22,6 +19,17 @@
   text-align: center;
   cursor: pointer;
   margin-top: 10px;
+}
+
+.author-card__logo-container {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #E0E4EB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .author-card__profile {
