--- a/src/components/content-block/forms/aboutAurhorForm/aboutAurhorForm.ejs
+++ b/src/components/content-block/forms/aboutAurhorForm/aboutAurhorForm.ejs
@@ -22,18 +22,19 @@
                 </svg>
                 <span class="about-author-form__required-ellipse"></span>
             </div>
-            <div class="about-author-form__dropdown">
-                <input type="hidden" id="about-author__input">
-                <button class="about-author__dropdown-toggle open" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+            <div class="about-author-form__select select-js">
+                <input type="hidden" name="">
+                <div class="select__head-js about-author-form__select-head">
                     Ваша специализация
-                    <svg class="about-author__dropdown-icon" width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10.9997 1.16994C10.8123 0.983692 10.5589 0.87915 10.2947 0.87915C10.0305 0.87915 9.77707 0.983692 9.5897 1.16994L5.9997 4.70994L2.4597 1.16994C2.27234 0.983692 2.01889 0.87915 1.7547 0.87915C1.49052 0.87915 1.23707 0.983692 1.0497 1.16994C0.955976 1.26291 0.881582 1.37351 0.830813 1.49537C0.780044 1.61723 0.753906 1.74793 0.753906 1.87994C0.753906 2.01195 0.780044 2.14266 0.830813 2.26452C0.881582 2.38638 0.955976 2.49698 1.0497 2.58994L5.2897 6.82994C5.38267 6.92367 5.49327 6.99806 5.61513 7.04883C5.73699 7.0996 5.86769 7.12574 5.9997 7.12574C6.13172 7.12574 6.26242 7.0996 6.38428 7.04883C6.50614 6.99806 6.61674 6.92367 6.7097 6.82994L10.9997 2.58994C11.0934 2.49698 11.1678 2.38638 11.2186 2.26452C11.2694 2.14266 11.2955 2.01195 11.2955 1.87994C11.2955 1.74793 11.2694 1.61723 11.2186 1.49537C11.1678 1.37351 11.0934 1.26291 10.9997 1.16994Z" fill="#777C86"/>
+                    <svg class="about-author-form__select-arrow" width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11.0002 1.17C10.8128 0.983753 10.5594 0.879211 10.2952 0.879211C10.031 0.879211 9.77756 0.983753 9.59019 1.17L6.00019 4.71L2.46019 1.17C2.27283 0.983753 2.01938 0.879211 1.75519 0.879211C1.49101 0.879211 1.23756 0.983753 1.05019 1.17C0.956464 1.26297 0.88207 1.37357 0.831301 1.49543C0.780533 1.61729 0.754395 1.74799 0.754395 1.88C0.754395 2.01202 0.780533 2.14272 0.831301 2.26458C0.88207 2.38644 0.956464 2.49704 1.05019 2.59L5.29019 6.83C5.38316 6.92373 5.49376 6.99813 5.61562 7.04889C5.73747 7.09966 5.86818 7.1258 6.00019 7.1258C6.1322 7.1258 6.26291 7.09966 6.38477 7.04889C6.50663 6.99813 6.61723 6.92373 6.71019 6.83L11.0002 2.59C11.0939 2.49704 11.1683 2.38644 11.2191 2.26458C11.2699 2.14272 11.296 2.01202 11.296 1.88C11.296 1.74799 11.2699 1.61729 11.2191 1.49543C11.1683 1.37357 11.0939 1.26297 11.0002 1.17Z" fill="#777C86"/>
                     </svg>
-                </button>
-                <ul class="about-author__dropdown-menu open" aria-labelledby="dropdownMenuButton">
-                    <li><span class="about-author__dropdown-item">специализация 1</span></li>
-                    <li><span class="about-author__dropdown-item">специализация 2</span></li>
-                    <li><span class="about-author__dropdown-item">специализация 3</span></li>
+                </div>
+                <ul class="select__list-js about-author-form__select-list">
+                    <li class="select__item-js about-author-form__select-item">Начинающий блогер</li>
+                    <li class="select__item-js about-author-form__select-item">Тевел-блогер</li>
+                    <li class="select__item-js about-author-form__select-item">Профессиональный журналист</li>
+                    <li class="select__item-js about-author-form__select-item">Другое</li>
                 </ul>
             </div>
         </div>
