--- a/src/components/content-block/forms/location-search/locationSearch.ejs
+++ b/src/components/content-block/forms/location-search/locationSearch.ejs
@@ -7,9 +7,9 @@
         </span>
         <span class="location-search__title"><%= dataLocation.title %></span>
         <form class="location-search__form">
-            <div class="location-search__country select">
+            <div class="location-search__country select-js">
                 <input class="select__input" type="hidden" name="">
-                <div class="select__head">
+                <div class="select__head-js location-search__country-head">
                     <div class="location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -28,8 +28,8 @@
                         <path d="M11.0002 1.17C10.8128 0.983753 10.5594 0.879211 10.2952 0.879211C10.031 0.879211 9.77756 0.983753 9.59019 1.17L6.00019 4.71L2.46019 1.17C2.27283 0.983753 2.01938 0.879211 1.75519 0.879211C1.49101 0.879211 1.23756 0.983753 1.05019 1.17C0.956464 1.26297 0.88207 1.37357 0.831301 1.49543C0.780533 1.61729 0.754395 1.74799 0.754395 1.88C0.754395 2.01202 0.780533 2.14272 0.831301 2.26458C0.88207 2.38644 0.956464 2.49704 1.05019 2.59L5.29019 6.83C5.38316 6.92373 5.49376 6.99813 5.61562 7.04889C5.73747 7.09966 5.86818 7.1258 6.00019 7.1258C6.1322 7.1258 6.26291 7.09966 6.38477 7.04889C6.50663 6.99813 6.61723 6.92373 6.71019 6.83L11.0002 2.59C11.0939 2.49704 11.1683 2.38644 11.2191 2.26458C11.2699 2.14272 11.296 2.01202 11.296 1.88C11.296 1.74799 11.2699 1.61729 11.2191 1.49543C11.1683 1.37357 11.0939 1.26297 11.0002 1.17Z" fill="#D5DCE0"/>
                     </svg>
                 </div>
-                <ul class="select__list">
-                    <li class="select__item location-search__country-item">
+                <ul class="select__list-js location-search__country-list">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -43,7 +43,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -57,7 +57,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -71,7 +71,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -85,7 +85,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -99,7 +99,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -113,7 +113,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -127,7 +127,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -141,7 +141,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -155,7 +155,7 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item location-search__country-item">
+                    <li class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
