--- a/src/components/content-block/forms/location-search/locationSearch.scss
+++ b/src/components/content-block/forms/location-search/locationSearch.scss
@@ -171,7 +171,7 @@
   width: 104px;
 }
 
-.select__head {
+.location-search__country-head {
   width: 100%;
   height: 36px;
   border: 1px solid #D5DCE0;
@@ -181,12 +181,12 @@
   position: relative;
 }
 
-.select__head.open {
+.location-search__country-head.open {
   border-bottom: 0;
   border-radius: 10px 10px 0 0;
 }
 
-.select__list {
+.location-search__country-list {
   display: none;
   position: absolute;
   top: 100%;
@@ -200,12 +200,12 @@
   flex-direction: column;
 }
 
-.select__list.active {
+.location-search__country-list.active {
   display: flex;
   border-top: 0;
 }
 
-.select__list .location-search__country-item {
+.location-search__country-list .location-search__country-item {
   margin: 10px 0;
   padding: 5px 5px 5px 9px;
   width: fit-content;
@@ -213,7 +213,7 @@
   pointer-events: none;
 }
 
-.select__list .location-search__country-item:hover {
+.location-search__country-list .location-search__country-item:hover {
   background-color: #F0F2F5;
   border-radius: 5px;
 }
@@ -241,6 +241,7 @@
   top: 50%;
   transform: translateY(-50%);
 }
-.select__head.open .location-search__country-arrow {
+
+.location-search__country-head.open .location-search__country-arrow {
   transform: translateY(-50%) rotate(180deg);
 }
