--- a/src/components/location-menu/location-Menu.scss
+++ b/src/components/location-menu/location-Menu.scss
@@ -103,6 +103,7 @@
 }
 
 .exist-search__input:placeholder-shown {
+  font-family: Roboto, serif;
   color: #BDBDBD;
   background-color: #F2F2F2;
   border-color: transparent;
