--- a/src/components/about/about.ejs
+++ b/src/components/about/about.ejs
@@ -16,14 +16,13 @@
     </div>
     <div class="detail-content__slider">
         <% let linkImage = [
-            {image: "static/Rectangle 60.png", sourceText: "Источник фото1: https://kudago.com/spb/place/mednyj-vsadnik/" },
-            {image: "static/Rectangle 61.png", sourceText: "Источник фото2: https://kudago.com/spb/place/mednyj-vsadnik/" },
-            {image: "static/Rectangle 62.png", sourceText: "Источник фото3: https://kudago.com/spb/place/mednyj-vsadnik/" },
-            {image: "static/Rectangle 63.png", sourceText: "Источник фото4: https://kudago.com/spb/place/mednyj-vsadnik/" },
-            {image: "static/Rectangle 64.png", sourceText: "Источник фото5: https://kudago.com/spb/place/mednyj-vsadnik/" }
+            {image: "static/Rectangle 60.png", source: "https://kudago.com/spb/place/mednyj-vsadnik/1" },
+            {image: "static/Rectangle 61.png", source: "https://kudago.com/spb/place/mednyj-vsadnik/2" },
+            {image: "static/Rectangle 62.png", source: "https://kudago.com/spb/place/mednyj-vsadnik/3" },
+            {image: "static/Rectangle 63.png", source: "https://kudago.com/spb/place/mednyj-vsadnik/4" },
+            {image: "static/Rectangle 64.png", source: "https://kudago.com/spb/place/mednyj-vsadnik/5" }
         ] %>
         <%- include('../content-block/slider/swiper', {linkImage}); -%>
-        <p data-source-targer class="help-text">Источник фото: https://kudago.com/spb/place/mednyj-vsadnik/</p>
     </div>
     <div class="about-content__container">
         <h2 class="content__title">Команда рассказывает о проекте</h2>
