--- a/src/components/content-block/forms/location-search/locationSearch.ejs
+++ b/src/components/content-block/forms/location-search/locationSearch.ejs
@@ -8,7 +8,7 @@
         <span class="location-search__title"><%= dataLocation.title %></span>
         <form class="location-search__form">
             <div class="location-search__country select-js">
-                <input class="select__input" type="hidden" name="">
+                <input class="select__input" type="hidden" name="" value="1">
                 <div class="select__head-js location-search__country-head">
                     <div class="location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
@@ -29,7 +29,7 @@
                     </svg>
                 </div>
                 <ul class="select__list-js location-search__country-list">
-                    <li class="select__item-js location-search__country-item">
+                    <li data-select-id="1" class="select__item-js location-search__country-item">
                         <span class="location-search__country-prefix">AM</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
@@ -43,120 +43,8 @@
                             </g>
                         </svg>
                     </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
-                        <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="28" height="20" rx="2" fill="white"/>
-                            <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
-                                <rect width="28" height="20" rx="2" fill="white"/>
-                            </mask>
-                            <g mask="url(#mask0_904:6467)">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 13.3333H28V6.66667H0V13.3333Z" fill="#1047B9"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 6.66667H28V0H0V6.66667Z" fill="#F01C31"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20H28V13.3333H0V20Z" fill="#FECB2F"/>
-                            </g>
-                        </svg>
-                    </li>
-                    <li class="select__item-js location-search__country-item">
-                        <span class="location-search__country-prefix">AM</span>
+                    <li data-select-id="2" class="select__item-js location-search__country-item">
+                        <span class="location-search__country-prefix">RU</span>
                         <svg class="location-search__country-logo" width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="28" height="20" rx="2" fill="white"/>
                             <mask id="mask0_904:6467" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="28" height="20">
