--- a/src/components/content-block/gallery/gallery.ejs
+++ b/src/components/content-block/gallery/gallery.ejs
@@ -1,5 +1,5 @@
 <div class="article-gallery__container">
-    <img class="article-gallery__image js-open-modal" data-modal="1" src="static/Rectangle 61.png" alt="" />
-    <img class="article-gallery__image js-open-modal" data-modal="1" src="static/Rectangle 63.png" alt="" />
-    <img class="article-gallery__image js-open-modal" data-modal="1" src="static/Rectangle 64.png" alt="" />
+    <img class="article-gallery__image" data-fancybox="gallery" src="static/Rectangle 61.png" alt="" />
+    <img class="article-gallery__image " data-fancybox="gallery" src="static/Rectangle 63.png" alt="" />
+    <img class="article-gallery__image " data-fancybox="gallery" src="static/Rectangle 64.png" alt="" />
 </div>
