--- a/src/components/content-block/forms/add-new-detail-comment/addNewDetailComment.scss
+++ b/src/components/content-block/forms/add-new-detail-comment/addNewDetailComment.scss
@@ -36,6 +36,7 @@
   width: 100px;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .new-comment__action-send {
