--- a/src/components/detail/detail.ejs
+++ b/src/components/detail/detail.ejs
@@ -98,14 +98,13 @@
 </div>
 <div class="detail-content__slider">
     <% let linkImage = [
-        {image: "static/Rectangle 60.png"},
-        {image: "static/Rectangle 61.png"},
-        {image: "static/Rectangle 62.png"},
-        {image: "static/Rectangle 63.png"},
-        {image: "static/Rectangle 64.png"}
+        {image: "static/Rectangle 60.png", source:"https://kudago.com/spb/place/mednyj-vsadnik/1"},
+        {image: "static/Rectangle 61.png", source:"https://kudago.com/spb/place/mednyj-vsadnik/2"},
+        {image: "static/Rectangle 62.png", source:"https://kudago.com/spb/place/mednyj-vsadnik/3"},
+        {image: "static/Rectangle 63.png", source:"https://kudago.com/spb/place/mednyj-vsadnik/4"},
+        {image: "static/Rectangle 64.png", source:"https://kudago.com/spb/place/mednyj-vsadnik/5"}
     ] %>
     <%- include('../content-block/slider/swiper', {linkImage}); -%>
-    <p data-source-targer class="help-text">Источник фото: https://kudago.com/spb/place/mednyj-vsadnik/</p>
 </div>
 <div class="detail-content__container">
     <h2 class="content__title">
@@ -229,60 +228,3 @@
 </div>
 
 <%- include('comments/comments'); -%>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-    //modal gallery
-    !function (e) {
-        "function" != typeof e.matches && (e.matches = e.msMatchesSelector || e.mozMatchesSelector || e.webkitMatchesSelector || function (e) {
-            for (var t = this, o = (t.document || t.ownerDocument).querySelectorAll(e), n = 0; o[n] && o[n] !== t;) ++n;
-            return Boolean(o[n])
-        }), "function" != typeof e.closest && (e.closest = function (e) {
-            for (var t = this; t && 1 === t.nodeType;) {
-                if (t.matches(e)) return t;
-                t = t.parentNode
-            }
-            return null
-        })
-    }(window.Element.prototype);
-
-    let modalButtons = document.querySelectorAll('.js-open-modal'),
-        overlay = document.querySelector('.js-overlay-modal'),
-        closeButtons = document.querySelectorAll('.js-modal-close');
-
-    modalButtons.forEach(function (item) {
-        item.addEventListener('click', function (e) {
-            e.preventDefault();
-
-            let modalId = this.getAttribute('data-modal'),
-                modalElem = document.querySelector('.modal[data-modal="' + modalId + '"]');
-
-            modalElem.classList.add('active');
-            overlay.classList.add('active');
-        });
-    });
-
-    closeButtons.forEach(function (item) {
-        item.addEventListener('click', function (e) {
-            let parentModal = this.closest('.modal');
-
-            parentModal.classList.remove('active');
-            overlay.classList.remove('active');
-        });
-
-    });
-
-    document.body.addEventListener('keyup', function (e) {
-        let key = e.keyCode;
-
-        if (key == 27) {
-            document.querySelector('.modal.active').classList.remove('active');
-            document.querySelector('.overlay').classList.remove('active');
-        }
-    }, false);
-
-    overlay.addEventListener('click', function () {
-        document.querySelector('.modal.active').classList.remove('active');
-        this.classList.remove('active');
-    });
-    });
-</script>
