--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,42 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="HandheldFriendly" content="true">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </head>
 <body>
-
-<div class="banner" style="width: 100%; height: 120px;background-color: #7AC1E4;"></div>
-<%- include('components/menu/header__nav/header__nav'); -%>
-<%- include('components/header/header'); -%>
-
-<div class="wrapper">
-    <div class="main-menu__wrapper">
-        <%- include('components/menu/side-menu/side-menu'); -%>
-    </div>
-    <div class="wrapper-content">
-        <%- include('components/location-menu/location-menu'); -%>
-        <div class="content">
-            <%- include('components/card/main-card/main-card'); -%>
-            <%- include('components/card/card-items/card-items'); -%>
-        </div>
-    </div>
-</div>
-
-<%- include('components/footer/footer'); -%>
-<%- include('components/menu/footer-nav/footer-nav'); -%>
-<script src="main.js"></script>
+<ul style="padding: 20px">
+  <li><a href="/index2.html">Главная</a></li>
+  <li><a href="/about.html">О нас</a></li>
+  <li><a href="/aboutAuthor.html">Приглашаем к сотрудничеству</a></li>
+  <li><a href="/dashboard.html">Личный кабинет</a></li>
+  <li><a href="/detail.html">Статья</a></li>
+  <li><a href="/detailList.html">Список статей</a></li>
+  <li><a href="/poll.html">Опрос</a></li>
+</ul>
 </body>
 </html>
